feat(api): generate keys in-app (#63)
closes #55
