# api/src/handlers/services/destroy.rs
@@ -23,7 +23,7 @@ pub(crate) struct PathParams {
     params(PathParams),
     responses(
         (status = 200, body = Service),
-        (status = 400)
+        (status = 404)
     )
 )]
 pub(crate) async fn destroy_handler(
