# docs/api/openapi.json
@@ -148,7 +148,7 @@
               }
             }
           },
-          "400": {
+          "404": {
             "description": ""
           }
         }
@@ -183,7 +183,7 @@
               }
             }
           },
-          "400": {
+          "404": {
             "description": ""
           }
         }
@@ -226,7 +226,7 @@
               }
             }
           },
-          "400": {
+          "404": {
             "description": ""
           }
         }
@@ -259,7 +259,7 @@
               }
             }
           },
-          "400": {
+          "404": {
             "description": ""
           }
         }
@@ -375,7 +375,7 @@
               }
             }
           },
-          "400": {
+          "404": {
             "description": ""
           }
         }
@@ -418,7 +418,7 @@
               }
             }
           },
-          "400": {
+          "404": {
             "description": ""
           }
         }
@@ -451,7 +451,7 @@
               }
             }
           },
-          "400": {
+          "404": {
             "description": ""
           }
         }
@@ -463,22 +463,11 @@
       "CreateKeyPayload": {
         "type": "object",
         "required": [
-          "kind",
-          "key"
+          "kind"
         ],
         "properties": {
-          "key": {
-            "type": "string"
-          },
           "kind": {
             "$ref": "#/components/schemas/KeyKind"
-          },
-          "priority": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32"
           }
         }
       },
